# fondue-rays

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.d2d7c3e  Fondue-Rays.cbp  FondueEngine.cbp  Makefile  README.md  cmake_install.cmake
Dependencies/FreeImage/: a.out.js  emscript-freeimage.sh
Dependencies/assimp-4.0.1/: Assimp.cbp  DartConfiguration.tcl  emscript-assimp.sh
Dependencies/assimp-4.0.1/test/: CTestTestfile.cmake
Dependencies/assimp-4.0.1/test/headercheck/: CTestTestfile.cmake
Dependencies/emscripten/include/SDL/: SDL_config_minimal.h
Dependencies/emscripten/include/emscripten/: emscripten.h
Dependencies/glfw-3.2.1/: CMakeCache.txt  GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
Dependencies/glfw-3.2.1/examples/: Makefile  cmake_install.cmake
Dependencies/glfw-3.2.1/src/: Makefile  cmake_install.cmake
Dependencies/glfw-3.2.1/tests/: Makefile  cmake_install.cmake
configuration/: root_directory.h
interfaces/: raymarch.cpp
res/models/tiger/: tiger.mtl
src/: protoengine.h
src/graphics/: shader.const  shader.h  window.cpp  window.h
src/graphics/3d/batches/: batch.h  bprimitives.h  textured.cpp  textured.h
src/graphics/3d/batches/outdated/: basic.cpp  basic.h
src/graphics/3d/rasterizables/: lightmanager.h  meshmanager.h  model.cpp  model.h
src/graphics/3d/renderers/: modelvoxelizer.h  raymarch.h  raytracer.h  renderpass.h  rprimitives.h  scenevoxelizer.h  terrain.h  terrainvoxelizer.h  voxelizer.h
src/graphics/3d/scenes/: camera.cpp  camera.h  view.h
src/graphics/glwrappers/: buffer.cpp  buffer.h  cubemap.cpp  cubemap.h  framebuffer.cpp  framebuffer.h  indexbuffer.cpp  indexbuffer.h  texture.cpp  texture.h  texturearray.cpp  texturearray.h  vertexarray.cpp  vertexarray.h
src/maths/: functions.h  mat3.h  mat4.cpp  mat4.h  maths.h  quaternion.cpp  quaternion.h  vec2.cpp  vec2.h  vec3.h  vec4.cpp  vec4.h
src/shaders/: .basic.fs.swp  .cullPass.fs.swo  .cullPass.fs.swp  .forward.fs.swo  .forward.fs.swp  .geometryPass.fs.swp  .geometryPass.vs.swn  .geometryPass.vs.swo  .geometryPass.vs.swp  .geometryPassUntextured.fs.swp  .raymarch.fs.swp  .raytest.fs.swm  .raytest.fs.swn  .raytest.fs.swo  .tiledShading.glsl.swn  .tiledShading.glsl.swo  .tiledShading.glsl.swp  .tilingShader.glsl.swp  .voxelizer.fs.swp  4  gensdf.fs  raymarch.fs  raymarch.vs  terrain.fs  voxelizeTerrain.fs  voxelizer.fs
src/utils/: fileutils.h  imageloader.h  system.h  timer.h
